--- a/vue/package.json
+++ b/vue/package.json
@@ -8,10 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.0-alpha1",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6",
-    "vue-transition": "^0.1.3"
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
