--- a/vue/package.json
+++ b/vue/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^36.0.0",
+    "@ckeditor/ckeditor5-vue": "^4.0.1",
     "bootstrap": "^5.3.0-alpha1",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
