--- a/vue/package.json
+++ b/vue/package.json
@@ -12,6 +12,8 @@
     "@ckeditor/ckeditor5-vue": "^4.0.1",
     "axios": "^1.3.4",
     "bootstrap": "^5.3.0-alpha1",
+    "camelcase": "^7.0.1",
+    "ckeditor5-custom-build": "file:./ckeditor5",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
     "vuex": "^4.0.2"
